infrastructure/kitos-dev/kitos/services/kitos-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitos-api
  namespace: kitos
spec:
  ports:
  - appProtocol: http
    name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: kitos-api
  type: ClusterIP
