infrastructure/kitos-dev/kitos/services/kitos-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: easy-hosting-issuer
  name: kitos-api
  namespace: kitos
spec:
  rules:
  - host: api.kitos-dev.strongminds.tech
    http:
      paths:
      - backend:
          service:
            name: kitos-api
            port:
              name: http
        path: /
        pathType: Prefix
  - host: f609671a-9d56-4164-ae33-932e7f0df85b.kitos-dev.strongminds.easyhosting.strongminds.dev
    http:
      paths:
      - backend:
          service:
            name: kitos-api
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.kitos-dev.strongminds.tech
    secretName: api-kitos-dev-strongminds-tech-tls
  - hosts:
    - f609671a-9d56-4164-ae33-932e7f0df85b.kitos-dev.strongminds.easyhosting.strongminds.dev
    secretName: f609671a-9d56-4164-ae33-932e7f0df85b-kitos-dev-strongminds-easyhosting-strongminds-dev-tls
